# BowOSAi

./: Cargo.toml  flake.nix
src/: api.rs  clipboard.rs  imageAnalyzer.rs  index.html  main.rs  spinner.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: imageAnalyzer.rs  main.rs
