cargo-features = ["edition2024"]
[package]
name = "BowosAI"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-openai = { version = "0.29.2", features = ["byot"] }
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
serde = "1.0.219"
serde_json = "1.0.143"
tauri = "2.9.2"
tokio = { version = "1.0", features = ["full"] }

